cmake_minimum_required(VERSION 3.0)
project(projet_vh)
set(CMAKE_CXX_STANDARD 17)
#set(OpenCV_DIR /usr/share/opencv4)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(projet_vh main.cpp)
target_link_libraries(projet_vh  ${OpenCV_LIBS})
install(TARGETS projet_vh RUNTIME DESTINATION bin)
